# event_service

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
event_service/: __init__.py  dependencies.py  main.py
event_service/auth/: __init__.py  app_dependencies.py  auth_route.py  user_utils.py
event_service/crud/: __init__.py  event.py
event_service/models/: __init__.py  database.py  models.py  schemas.py
event_service/routes/: __init__.py  event.py
tests/: conftest.py  test_app.py
