[tool.poetry]
name = "event-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "event_service"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
